test/extern/ferguson/externblock/two-modules-error.good
two-modules-error.chpl:1: In module 'OuterModule':
two-modules-error.chpl:15: error: cannot find 'y' in module 'A'
two-modules-error.chpl:18: error: cannot find 'y' in module 'A'
